manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    name: demo
---
apiVersion: v1
kind: Namespace
metadata:
  name: vault-infra
