manifest/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: demo
  labels:
    app: demo-app
spec:
  ports:
    - port: 3000
      name: demo-app
  type: NodePort
  selector:
    app: demo-app
