manifest/vswh.yaml
---
# Source: vault-secrets-webhook/templates/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vswh-vault-secrets-webhook
  namespace: default
  labels:
    helm.sh/chart: vault-secrets-webhook-1.13.2
    app.kubernetes.io/name: vault-secrets-webhook
    app.kubernetes.io/instance: vswh
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: mutating-webhook
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 8443
      protocol: TCP
      name: vault-secrets-webhook
  selector:
    app.kubernetes.io/name: vault-secrets-webhook
    app.kubernetes.io/instance: vswh
---
# Source: vault-secrets-webhook/templates/webhook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vswh-vault-secrets-webhook
  namespace: default
  labels:
    helm.sh/chart: vault-secrets-webhook-1.13.2
    app.kubernetes.io/name: vault-secrets-webhook
    app.kubernetes.io/instance: vswh
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: mutating-webhook
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: vault-secrets-webhook
      app.kubernetes.io/instance: vswh
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vault-secrets-webhook
        app.kubernetes.io/instance: vswh
        security.banzaicloud.io/mutate: skip
      annotations:
        checksum/config: 56e9ad367d617033013bbda0c6041b87eaed924a9400a3cdfc0be0e8551ced63
    spec:
      serviceAccountName: vswh-vault-secrets-webhook
      volumes:
        - name: serving-cert
          secret:
            defaultMode: 420
            secretName: vswh-vault-secrets-webhook-webhook-tls
      containers:
        - name: vault-secrets-webhook
          image: "ghcr.io/banzaicloud/vault-secrets-webhook:1.13.1"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8443
          readinessProbe:
            httpGet:
              scheme: HTTPS
              path: /healthz
              port: 8443
          volumeMounts:
            - mountPath: /var/serving-cert
              name: serving-cert
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 65534
          resources: {}
---
# Source: vault-secrets-webhook/templates/apiservice-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: vswh-vault-secrets-webhook
  namespace: default
webhooks:
  - name: pods.vault-secrets-webhook.admission.banzaicloud.com
    admissionReviewVersions: ["v1beta1"]
    clientConfig:
      service:
        namespace: default
        name: vswh-vault-secrets-webhook
        path: /pods
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGakNDQWY2Z0F3SUJBZ0lSQU84bGF2VHMyM21lMjRHNm5EUDBlMTB3RFFZSktvWklodmNOQVFFTEJRQXcKRlRFVE1CRUdBMVVFQXhNS2MzWmpMV05oZEMxallUQWVGdzB5TVRBNE1EY3dPREkyTkRCYUZ3MHpNVEE0TURVdwpPREkyTkRCYU1CVXhFekFSQmdOVkJBTVRDbk4yWXkxallYUXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBCkE0SUJEd0F3Z2dFS0FvSUJBUURxaG92eGtBL01sK1g0bXd2TWdaeGhEVWpuRUhNRmIxZ0gzQzBUVS9XNUJEc0MKQXRvb2NqbzlYMVpPNXhCVW8xZ0t5cUlIeDNQR0dRQXJGSXN5cGJ4ZkthNXZlelQwcVNNZ1M0Y3o1c0NZUmI3cApOdGFYMTNxUmNx [...]
    rules:
      - operations:
          - CREATE
        apiGroups:
          - "*"
        apiVersions:
          - "*"
        resources:
          - pods
    failurePolicy: Ignore
    namespaceSelector:
      matchExpressions:
        - key: name
          operator: NotIn
          values:
            - kube-system
        - key: name
          operator: NotIn
          values:
            - default
    objectSelector:
      matchExpressions:
        - key: security.banzaicloud.io/mutate
          operator: NotIn
          values:
            - skip
    sideEffects: NoneOnDryRun
  - name: secrets.vault-secrets-webhook.admission.banzaicloud.com
    admissionReviewVersions: ["v1beta1"]
    clientConfig:
      service:
        namespace: default
        name: vswh-vault-secrets-webhook
        path: /secrets
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGakNDQWY2Z0F3SUJBZ0lSQU84bGF2VHMyM21lMjRHNm5EUDBlMTB3RFFZSktvWklodmNOQVFFTEJRQXcKRlRFVE1CRUdBMVVFQXhNS2MzWmpMV05oZEMxallUQWVGdzB5TVRBNE1EY3dPREkyTkRCYUZ3MHpNVEE0TURVdwpPREkyTkRCYU1CVXhFekFSQmdOVkJBTVRDbk4yWXkxallYUXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBCkE0SUJEd0F3Z2dFS0FvSUJBUURxaG92eGtBL01sK1g0bXd2TWdaeGhEVWpuRUhNRmIxZ0gzQzBUVS9XNUJEc0MKQXRvb2NqbzlYMVpPNXhCVW8xZ0t5cUlIeDNQR0dRQXJGSXN5cGJ4ZkthNXZlelQwcVNNZ1M0Y3o1c0NZUmI3cApOdGFYMTNxUmNx [...]
    rules:
      - operations:
          - CREATE
          - UPDATE
        apiGroups:
          - "*"
        apiVersions:
          - "*"
        resources:
          - secrets
    failurePolicy: Ignore
    namespaceSelector:
      matchExpressions:
        - key: name
          operator: NotIn
          values:
            - kube-system
        - key: name
          operator: NotIn
          values:
            - default
    objectSelector:
      matchExpressions:
        - key: owner
          operator: NotIn
          values:
            - helm
        - key: security.banzaicloud.io/mutate
          operator: NotIn
          values:
            - skip
    sideEffects: NoneOnDryRun
